# mlflow-snowflake

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dev_requirements.txt  pyproject.toml
.github/workflows/: main.yml
examples/: e2e_demo.ipynb
src/snowflake/ml/mlflow/: __init__.py  session_util.py
src/snowflake/ml/mlflow/deploy/: __init__.py  constants.py  deployment_client.py  management_util.py  udf_util.py
src/snowflake/ml/mlflow/util/: pkg_util.py  snowsql_cfg_util.py  telemetry.py
tests/: conftest.py  test_deployment_client.py  test_pkg_util.py  test_session_util.py  test_skl_udf.py  test_snowsql_cfg_util.py  test_telemetry.py  test_udf_util.py  test_xgb_udf.py
